k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: googlesheetclone-service
  namespace: 2401025

spec:
  selector:
    app: googlesheetclone

  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
