k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: googlesheetclone-ingress
  namespace: "2401025"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: googlesheetclone.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: googlesheetclone-service
                port:
                  number: 80
